--- a/dccwebproject/loginapp/templates/loginapp/calendar.html
+++ b/dccwebproject/loginapp/templates/loginapp/calendar.html
@@ -636,7 +636,7 @@
         dragRevertDuration: 0,
         startEditable: true,
         eventLimit: true,
-        allDayDefault: true,
+        allDayDefault: false,
         selectable: true,
         selectHelper: true,
         header: {
