--- a/dccwebproject/loginapp/templates/loginapp/engglist1.html
+++ b/dccwebproject/loginapp/templates/loginapp/engglist1.html
@@ -66,213 +66,52 @@
         <div class="navbar-custom-menu">
           <ul class="nav navbar-nav">
             <!-- Messages: style can be found in dropdown.less-->
-            <li class="dropdown messages-menu">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-envelope-o"></i>
-                <span class="label label-success">4</span>
-              </a>
-              <ul class="dropdown-menu">
-                <li class="header">You have 4 messages</li>
-                <li>
-                  <!-- inner menu: contains the actual data -->
-                  <ul class="menu">
-                    <li>
-                      <!-- start message -->
-                      <a href="#">
-                        <div class="pull-left">
-                          <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
-                        </div>
-                        <h4>
-                          Support Team
-                          <small><i class="fa fa-clock-o"></i> 5 mins</small>
-                        </h4>
-                        <p>Why not buy a new awesome theme?</p>
-                      </a>
-                    </li>
-                    <!-- end message -->
-                    <li>
-                      <a href="#">
-                        <div class="pull-left">
-                          <img src="{% static 'loginapp/dist/img/user3-128x128.jpg' %}" class="img-circle" alt="User Image">
-                        </div>
-                        <h4>
-                          Engineer's Team
-                          <small><i class="fa fa-clock-o"></i> 2 hours</small>
-                        </h4>
-                        <p>Why not buy a new awesome theme?</p>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <div class="pull-left">
-                          <img src="{% static 'loginapp/dist/img/user4-128x128.jpg' %}" class="img-circle" alt="User Image">
-                        </div>
-                        <h4>
-                          Developers
-                          <small><i class="fa fa-clock-o"></i> Today</small>
-                        </h4>
-                        <p>Why not buy a new awesome theme?</p>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <div class="pull-left">
-                          <img src="{% static 'loginapp/dist/img/user3-128x128.jpg' %}" class="img-circle" alt="User Image">
-                        </div>
-                        <h4>
-                          Sales Department
-                          <small><i class="fa fa-clock-o"></i> Yesterday</small>
-                        </h4>
-                        <p>Why not buy a new awesome theme?</p>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <div class="pull-left">
-                          <img src="{% static 'loginapp/dist/img/user4-128x128.jpg' %}" class="img-circle" alt="User Image">
-                        </div>
-                        <h4>
-                          Reviewers
-                          <small><i class="fa fa-clock-o"></i> 2 days</small>
-                        </h4>
-                        <p>Why not buy a new awesome theme?</p>
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="footer"><a href="#">See All Messages</a></li>
-              </ul>
-            </li>
+
             <!-- Notifications: style can be found in dropdown.less -->
             <li class="dropdown notifications-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="fa fa-bell-o"></i>
-                <span class="label label-warning">10</span>
+                <span class="label label-warning">{{call}}</span>
               </a>
               <ul class="dropdown-menu">
-                <li class="header">You have 10 notifications</li>
+                <li class="header">You have {{call}} notifications</li>
                 <li>
                   <!-- inner menu: contains the actual data -->
                   <ul class="menu">
                     <li>
                       <a href="#">
-                        <i class="fa fa-users text-aqua"></i> 5 new members joined today
+                        <i class="fa fa-users text-aqua"></i> {{open}} new calls opened
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        <i class="fa fa-warning text-yellow"></i> Very long description here that may not fit into the
-                        page and may cause design problems
+                        <i class="fa fa-warning text-yellow"></i> {{pending}} calls are pending
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        <i class="fa fa-users text-red"></i> 5 new members joined
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="fa fa-shopping-cart text-green"></i> 25 sales made
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="fa fa-user text-red"></i> You changed your username
+                        <i class="fa fa-users text-red"></i>{{closed}} calls have been closed
                       </a>
                     </li>
                   </ul>
                 </li>
-                <li class="footer"><a href="#">View all</a></li>
+
               </ul>
             </li>
             <!-- Tasks: style can be found in dropdown.less -->
-            <li class="dropdown tasks-menu">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-flag-o"></i>
-                <span class="label label-danger">9</span>
-              </a>
-              <ul class="dropdown-menu">
-                <li class="header">You have 9 tasks</li>
-                <li>
-                  <!-- inner menu: contains the actual data -->
-                  <ul class="menu">
-                    <li>
-                      <!-- Task item -->
-                      <a href="#">
-                        <h3>
-                          Design some buttons
-                          <small class="pull-right">20%</small>
-                        </h3>
-                        <div class="progress xs">
-                          <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">20% Complete</span>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
-                      <a href="#">
-                        <h3>
-                          Create a nice theme
-                          <small class="pull-right">40%</small>
-                        </h3>
-                        <div class="progress xs">
-                          <div class="progress-bar progress-bar-green" style="width: 40%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">40% Complete</span>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
-                      <a href="#">
-                        <h3>
-                          Some task I need to do
-                          <small class="pull-right">60%</small>
-                        </h3>
-                        <div class="progress xs">
-                          <div class="progress-bar progress-bar-red" style="width: 60%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">60% Complete</span>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <!-- end task item -->
-                    <li>
-                      <!-- Task item -->
-                      <a href="#">
-                        <h3>
-                          Make beautiful transitions
-                          <small class="pull-right">80%</small>
-                        </h3>
-                        <div class="progress xs">
-                          <div class="progress-bar progress-bar-yellow" style="width: 80%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">80% Complete</span>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
-                    <!-- end task item -->
-                  </ul>
-                </li>
-                <li class="footer">
-                  <a href="#">View all tasks</a>
-                </li>
-              </ul>
-            </li>
+
+
+
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="user-image" alt="User Image">
-                <span class="hidden-xs">Admin</span>
+                <span class="hidden-xs">{{ request.user.username }}</span>
               </a>
               <ul class="dropdown-menu">
                 <!-- User image -->
                 <li class="user-header">
-
+                  <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
 
                 </li>
 
@@ -448,6 +287,7 @@
                                <th>Address</th>
                                 <th>Edit</th>
                                 <th>Track</th>
+                                <th>Performance</th>
                              </tr>
                               {% for list in enggobjs %}
                              <tr>
@@ -456,11 +296,15 @@
                                <td>{{list.engg_contact_number}}</td>
                                 <td>{{list.engg_city}}</td>
                                   <td>{{list.engg_branch_code}}</td>
-
-                               <td><span class="label label-success">{{list.engg_status}}</span></td>
+                                  {% ifequal list.engg_status 'Online' %}
+                                   <td><span class="label label-success">{{list.engg_status}}</span></td>
+                                    {%else%}
+                                     <td><span class="label label-danger">{{list.engg_status}}</span></td>
+                                   {%endifequal%}
                                <td>{{list.engg_address}}</td>
                                <td><a href="{% url 'loginapp:enggupdates' list.id %}">update</a></td>
-                               <td><a href="{% url 'loginapp:enggtrack' list.engg_id %}">track</a></td>
+                               <td><a href="{% url 'loginapp:enggtrack1' list.id %}">track</a></td>
+                               <td><a href="{% url 'loginapp:enggperf1' list.engg_id %}">performance</a></td>
                              </tr>
                                  {%endfor%}
                            </table>
@@ -700,15 +544,15 @@
   <!-- Bootstrap 3.3.7 -->
   <script src="{% static 'loginapp/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
   <!-- Morris.js charts -->
-  <script src="{% static 'loginapp/bower_components/raphael/raphael.min.js' %}"></script>
-  <script src="{% static 'loginapp/bower_components/morris.js/morris.min.js' %}"></script>
+  <!-- <script src="{% static 'loginapp/bower_components/raphael/raphael.min.js' %}"></script>
+  <script src="{% static 'loginapp/bower_components/morris.js/morris.min.js' %}"></script> -->
   <!-- Sparkline -->
   <script src="{% static 'loginapp/bower_components/jquery-sparkline/dist/jquery.sparkline.min.js' %}"></script>
   <!-- jvectormap -->
-  <script src="{% static 'loginapp/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js' %}"></script>
-  <script src="{% static 'loginapp/plugins/jvectormap/jquery-jvectormap-world-mill-en.js' %}"></script>
+  <!-- <script src="{% static 'loginapp/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js' %}"></script>
+  <script src="{% static 'loginapp/plugins/jvectormap/jquery-jvectormap-world-mill-en.js' %}"></script> -->
   <!-- jQuery Knob Chart -->
-  <script src="{% static 'loginapp/bower_components/jquery-knob/dist/jquery.knob.min.js' %}"></script>
+  <!-- <script src="{% static 'loginapp/bower_components/jquery-knob/dist/jquery.knob.min.js' %}"></script> -->
   <!-- daterangepicker -->
   <script src="{% static 'loginapp/bower_components/moment/min/moment.min.js' %}"></script>
   <script src="{% static 'loginapp/bower_components/bootstrap-daterangepicker/daterangepicker.js' %}"></script>
@@ -723,18 +567,10 @@
   <!-- AdminLTE App -->
   <script src="{% static 'loginapp/dist/js/adminlte.min.js' %}"></script>
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <script src="{% static 'loginapp/dist/js/pages/dashboard.js' %}"></script>
+  <!-- <script src="{% static 'loginapp/dist/js/pages/dashboard.js' %}"></script> -->
   <!-- AdminLTE for demo purposes -->
   <script src="{% static 'loginapp/dist/js/demo.js' %}"></script>
-  <script>
-    $(function () {
-      $('input').iCheck({
-        checkboxClass: 'icheckbox_square-blue',
-        radioClass: 'iradio_square-blue',
-        increaseArea: '20%', /* optional */
-      });
-    });
-  </script>
+
 </body>
 
 </html>
